--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [INFR11090]
-description: [Decision Making in Robotics and Autonomous Agents]
+description: [Decision Making in Robots and Autonomous Agents]
